Recorded the retention investigation and the Factory user leak
The 1.4 GB retained by the unstored benchmark run has two holders, neither
of them the frontier or event pool: a soft one, the parent transition map
each state's MatchCollector keeps for a diamond check that never fires
(finding 3.6), which memory pressure reclaims; and a hard one, new finding
3.11: Factory.get registers the factory currently being built as a user
of the factory read, and RuleApplication builds its lazy members inside
such a build while reading Rule.isModifying and friends, so every rule
application is retained by the Rule for the life of the Grammar. Measured
at 537 MB per 409k applications, linear across runs.

The order of attack now puts that fix first, on its own branch, and the
long-run benchmark tier waits for it; the baseline is re-measured with a
fresh grammar per run, and the module-info paragraph describes the
reflection route instead of the requires.